--- a/scripts/04_modify_cart/01_gtm_rawModifyCartPush.html
+++ b/scripts/04_modify_cart/01_gtm_rawModifyCartPush.html
@@ -1,17 +1,16 @@
 <script>
 
-    var oldCartJSON = {{JS Utility - get Cart JSON from script in document}}(document);
+    var oldCartItemsList = {{JS Utility - get cartItemsList from script in document}}(document);
 
-    // create an initial snapshot of the cart to send to dataLayer
-    var ssInitialCartJSON = { 'initialCartItemsJSON': {{JS Utility - convert rawCartJSON to cartItemsJSON}}(oldCartJSON) };
-
-    // push the initial state of the cart
+    // push the initial state of the cart to dataLayer
     window.dataLayer.push({
-        'event' : 'ssModifyCartJSONPushed_gtm',
-        'ssModifyCartJSON': ssInitialCartJSON
+        'event' : 'ssModifyCartPushed_gtm',
+        'ssModifyCart': { 
+            'initialCartItemsList': oldCartItemsList 
+        }
     });
 
-//    console.log("initial cart", oldCartJSON);
+//    console.log("initial cart", oldCartItemsList);
 
     // Select the node that will be observed for mutations
     // in this case it's the main Cart Page Container div
@@ -64,28 +63,25 @@
 
                     var httpResponse = domParser.parseFromString(httpRequest.responseText, "text/html");
               
-                    //var oldCartJSONCopy = JSON.parse(JSON.stringify(oldCartJSON));
-                    var newCartJSON = {{JS Utility - get Cart JSON from script in document}}(httpResponse);
+                    var newCartItemsList = {{JS Utility - get cartItemsList from script in document}}(httpResponse);
 
-                    // create the raw modified cart JSON to send
-                    // "oldCart" is the snapshot with all relevant items in the previous version of the cart
-                    // "newCart" is the snapshot with all relevant items in the updated version of the cart
-                    var ssModifyCartJSON = {
-                        //'oldCartItems': {JS Utility - convert cartJSON to cartItemsJSON}(oldCartJSONCopy),
-                        'oldCartItemsJSON': {{JS Utility - convert rawCartJSON to cartItemsJSON}}(oldCartJSON),
-                        'newCartItemsJSON': {{JS Utility - convert rawCartJSON to cartItemsJSON}}(newCartJSON)
-                    }
+                    // create the raw modified cart object
+                    // "oldCartItemsList" is the snapshot with all relevant items in the previous version of the cart
+                    // "newCartItemsList" is the snapshot with all relevant items in the updated version of the cart
 
-                    // push this raw JSON to dataLayer with an event key ("_gtm" tells us that it is coming from GTM)
+                    // push these raw lists to dataLayer with an event key ("_gtm" tells us that it is coming from GTM)
                     window.dataLayer.push({
-                        'event' : 'ssModifyCartJSONPushed_gtm',
-                        'ssModifyCartJSON': ssModifyCartJSON
+                        'event' : 'ssModifyCartPushed_gtm',
+                        'ssModifyCart': {
+                            'oldCartItemsList': oldCartItemsList,
+                            'newCartItemsList': newCartItemsList
+                        }
                     });
 
-                    //console.log("old", oldCartJSONCopy);              
-                    //console.log("new", newCartJSON); 
+                    //console.log("old", oldCartItemsList);              
+                    //console.log("new", newCartItemsList); 
 
-                    oldCartJSON = newCartJSON;
+                    oldCartItemsList = newCartItemsList;
                 };
             }
                     
