Cleaned up names and streamlined flow for all eec functions

--- a/scripts/02_detail_view/01_ss_rawProductDetailPush.html
+++ b/scripts/02_detail_view/01_ss_rawProductDetailPush.html
@@ -41,7 +41,7 @@
         // push the anonymous transaction information to the dataLayer
         window.dataLayer = window.dataLayer || [];
         window.dataLayer.push({
-            'event' : 'ssRawProductDetailPushed_ss',
+            'event' : 'ssRawProductDetailPush',
             'ssRawProductDetail': ssRawProductDetail
         });
 
